deploy/k8s/service.yaml
#golang-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-front
spec:
  selector:
    app: usuarios-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
