deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usuarios-front
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: usuarios.lumonidy.studio
    http:
      paths:
      - backend:
          service:
            name: usuarios-front
            port:
              number: 80
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - usuarios.lumonidy.studio
    secretName: usuarios-front-secret
